* Sep 25 2000 hship

Speed up writing of catalog entries by using $(addprefix) to generate a single long line
(the old way invoked echo.exe a zillion times).

* Sep 24 2000 hship

Attempt to speed up the build a little, by including the relative
pathname to source and resource files in the catalogs.

* Sep 19 2000 hship

Hide a make invocation (related to generating the catalog) with a '@'.

* Sep 19 2000 hship

Split part of ModuleRules.mk into CommonRules.mk and some other re-organizing.

* Sep 19 2000 hship

Support modules with no packages, plus other minor tweaks.

* Sep 18 2000 hship

Started ChangeLog (some time after release 0.1.1).
[114704] Should allow source tree to live in different directory
[114708] JBE should remove duplicates from the classpath 